# what-makes-a-program-fast

./: .gitignore  CMakeLists.txt  ColumnarDatabase.hpp  Presentation.md  branch-prediction.cpp  conanfile.txt  main.cpp  memory-allocations.cpp  memory-layout-matrix.cpp  small-datastructures.cpp
